# gpt2-service

./: Dockerfile  Dockerfile.gpu  README.md  ToDo  pyproject.toml  pytest.ini
src/ml_ops_exercise/: config.py  data_classes.py  llm_service.py  main.py
tests/: postman_test  test_main.py
