[project]
name = "ml-ops-exercise"
version = "0.1.0"
description = ""
authors = [
    {name = "codeinsky",email = "todorov@bezeqint.net"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic (>=2.0.0)",
    "transformers (>=4.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "protobuf"
]

[tool.poetry]
packages = [{include = "ml_ops_exercise", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
